# code-graph-ai

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs  package.json  playwright.config.ts
.beads/: metadata.json
.cargo/: config.toml
.claude/: settings.json
.claude/hooks/: codegraph-pretool-bash.sh  codegraph-pretool-search.sh
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  publish.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/phases/01-foundation-core-parsing/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-import-resolution-graph-completion/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-query-engine-cli/: 03-03-SUMMARY.md  03-CONTEXT.md  03-VERIFICATION.md
.planning/phases/04-mcp-integration/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-watch-mode-persistence/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md
.planning/phases/06-performance-distribution/: 06-01-SUMMARY.md  06-02-SUMMARY.md  06-03-SUMMARY.md
.planning/quick/3-fix-tech-debt-importinfo-kind-unused-fie/: 3-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
compat/: ort_compat.cpp
src/: cli.rs  config.rs  language.rs  main.rs  output.rs  project.rs  registry.rs  setup.rs  walker.rs
src/cache/: envelope.rs  loader.rs  mod.rs
src/daemon/: client.rs  mod.rs  pid.rs  protocol.rs  server.rs  tests.rs
src/export/: dot.rs  mermaid.rs  mod.rs  model.rs
src/graph/: edge.rs  mod.rs  node.rs
src/hooks/: codegraph-pretool-search.sh
src/mcp/: hints.rs  mod.rs  params.rs  server.rs
src/parser/: go_imports.rs  go_symbols.rs  imports.rs  languages.rs  mod.rs  python_imports.rs  python_symbols.rs  relationships.rs  symbols.rs
src/query/: circular.rs  clones.rs  clusters.rs  context.rs  dead_code.rs  decorators.rs  diff.rs  file_summary.rs  find.rs  flow.rs  impact.rs  imports.rs  mod.rs  output.rs  refs.rs  rename.rs  stats.rs  structure.rs  util.rs
src/rag/: agent.rs  auth.rs  embedding.rs  mod.rs  retrieval.rs  session.rs  vector_store.rs
src/resolver/: barrel.rs  cargo_workspace.rs  file_resolver.rs  go_resolver.rs  mod.rs  python_resolver.rs  rust_mod_tree.rs  rust_resolver.rs  workspace.rs
src/watcher/: event.rs  incremental.rs  mod.rs
src/web/: mod.rs  server.rs  ws.rs
src/web/api/: auth.rs  chat.rs  file.rs  graph.rs  mod.rs  search.rs  stats.rs
tests/: integration.rs
tests/e2e/: chat.spec.ts  graph.spec.ts
tests/fixtures/go_project/: main.go
tests/fixtures/go_project/handlers/: handler.go
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css  main.ts
web/src/lib/: Header.svelte  Landing.svelte  SelectionBar.svelte  StatusBar.svelte  api.ts  navigation.ts  types.ts  ws.ts
web/src/lib/chat/: ChatInput.svelte  ChatMessage.svelte  ChatPanel.svelte  ProviderSelector.svelte  markdown.ts
web/src/lib/code/: CodePanel.svelte  syntax.ts
web/src/lib/graph/: ContextMenu.svelte  DepthFilter.svelte  GranularityToggle.svelte  GraphCanvas.svelte  colorHelpers.ts  graphData.ts  layout.ts
web/src/lib/layout/: DraggableDivider.svelte
web/src/lib/search/: SearchBar.svelte
web/src/lib/sidebar/: FileTree.svelte  Legend.svelte
