[package]
name = "code-graph"
version = "0.1.0"
edition = "2024"
description = "High-performance code intelligence engine for TypeScript/JavaScript codebases"

[dependencies]
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
ignore = "0.4"
petgraph = { version = "0.6", features = ["stable_graph"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
glob = "0.3"
