[package]
name = "code-graph-cli"
version = "0.1.0"
edition = "2024"
description = "Code intelligence engine for TypeScript/JavaScript — query the dependency graph instead of reading source files."
license = "MIT"
repository = "https://github.com/MonsieurBarti/code-graph-ai"
homepage = "https://github.com/MonsieurBarti/code-graph-ai"
readme = "README.md"
keywords = ["typescript", "code-graph", "mcp", "dependency-analysis", "cli"]
categories = ["development-tools", "command-line-utilities"]
exclude = [".planning/", ".github/", ".claude/", ".devcontainer/", ".entire/", "target/"]

[[bin]]
name = "code-graph"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
ignore = "0.4"
petgraph = { version = "0.6", features = ["stable_graph", "serde-1"] }
bincode = { version = "2", features = ["serde"] }
tempfile = "3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
glob = "0.3"
oxc_resolver = "3"
regex = "1"
rayon = "1"
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
schemars = "1"
notify = "8"
notify-debouncer-mini = "0.7"
